--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
   <main class="box">
 
-    <img class="QR-code" src="/images/image-qr-code.png">
+    <img class="QR-code" src="images/image-qr-code.png">
 
     <div class="main-text">
 
